[package]
name = "parawalk"
version = "0.1.2"
edition = "2024"
description = "Blazing-fast parallel directory walker with zero filtering baggage"
license = "MIT"
repository = "https://github.com/dylanisaiahp/parawalk"
keywords = ["parallel", "walker", "filesystem", "search", "directory"]
categories = ["filesystem", "concurrency"]

[dependencies]
crossbeam-deque = "0.8"
